--- a/scss/blocks/update.scss
+++ b/scss/blocks/update.scss
@@ -312,7 +312,13 @@
                 }
             }
         }
+
+        .table-content .table-col__titleForMoblie {
+            font-size: 16px;
+            line-height: 20px;
+        }
     }
+    
 
     .update-table {
         margin-top: 32px;
