--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -443,3 +443,14 @@ input :-ms-input-placeholder {
 	}
 
 }
+
+
+@media (min-width: 1600px) {
+
+	.form__row .form-control {
+		&:last-child {
+			margin-right: 0 !important; 
+		}
+	}
+
+}
