--- a/scss/components/pagination.scss
+++ b/scss/components/pagination.scss
@@ -14,6 +14,24 @@
     color: #222222;
     padding: 4px 9px;
     margin: 0 3px;
+    transition: all 0.3s;
+    svg {
+        transition: all 0.3s;
+        flex-shrink: 0;
+    }
+    &:hover {
+        background: #30A6CA;
+        border-radius: 4px;
+        color: #fff;
+        transition: all 0.3s;
+        svg {
+            transition: all 0.3s;
+            path {
+                fill: #fff;
+            }
+        }
+    }
+
 }
 
 .pagination__link.active {
@@ -28,7 +46,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 50%;
+    border-radius: 50% !important;
     background: #fff;
     margin-right: 24px;
 }
@@ -45,13 +63,14 @@
     padding: 0 7px;
 }
 
+
 .pagination__next {
     width: 28px;
     height: 28px;
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 50%;
+    border-radius: 50% !important;
     background: #fff;
     margin-left: 24px;
 }
